WIP - getFinancialAid complete
